--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
+__pycache__
+*.pyc
+*.swo
+*.swp
+
 **/pirate_archives
+
 #don't want plain text around
 **/gpt3_website
 **/temp
 **/hide
-#anything not in top level dir is personal data
+
 Self_Tracking/*.zip
-Self_Tracking/*/* 
