interpretor based on conda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
   "jupyter.notebookFileRoot": "${workspaceFolder}",
-  "python.defaultInterpreterPath": "/Users/clarkbenham/miniconda3"
+  "python.defaultInterpreterPath": "${env:CONDA_PREFIX}/bin/python",
+  "python.terminal.activateEnvironment": true,
+  "jupyter.kernels.filter": [
+    {
+      "type": "python",
+      "path": "${env:CONDA_PREFIX}/bin/python"
+    }
+  ],
+  "jupyter.kernels.trusted": [
+    "side_projects"
+  ]
 }
